# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
brain_games/: cli.py  game_logic.py  gameplay.py
brain_games/games/: calc.py  even.py  gameplay.py  games.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
